--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,300' rel='stylesheet' type='text/css'>
     <link href='css/font-awesome.min.css' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
 </head>
@@ -23,17 +23,17 @@
                 <nav>
                     <ul class="social">
                         <li>
-                            <a href="http://www.twitter.com/AdamMOliver" title="follow me on Twitter">
+                            <a href="https://www.twitter.com/AdamMOliver" title="follow me on Twitter">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.adamoliverphotography.com" title="View my photos">
+                            <a href="https://www.adamoliverphotography.com" title="View my photos">
                                 <i class="fa fa-camera"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.github.com/adamoliver" title="View my code on Github">
+                            <a href="https://www.github.com/adamoliver" title="View my code on Github">
                                 <i class="fa fa-github-alt"></i>
                             </a>
                         </li>
@@ -49,7 +49,7 @@
         </div><!-- end .wrap -->
     </div><!-- end #banner -->
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/imagescroll.js"></script>
 </body>
 </html>
