--- a/index.html
+++ b/index.html
@@ -1,55 +1,50 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <title>Adam Oliver | Front End Web Developer in Glasgow</title>
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="item">
+        <h1>Adam Oliver</h1>
+        <p>Front end developer</p>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,300' rel='stylesheet' type='text/css'>
-    <link href='css/font-awesome.min.css' rel='stylesheet' type='text/css'>
-    <link href='css/style.css' rel='stylesheet' type='text/css'>
-</head>
-
-<body>
-    <div id="banner" class="banner">
-        <div class="wrap">
-            <div class="content">
-
-                <header>
-                    <h1><span>Adam</span>Oliver</h1>
-                    <h2>Front End Web Developer</h2>
-                </header>
-
-                <nav>
-                    <ul class="social">
-                        <li>
-                            <a href="https://www.twitter.com/AdamMOliver" title="follow me on Twitter">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.adamoliverphotography.com" title="View my photos">
-                                <i class="fa fa-camera"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.github.com/adamoliver" title="View my code on Github">
-                                <i class="fa fa-github-alt"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/adammoliver" title="View my Linkedin profile">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-
-            </div><!-- end #content -->
-        </div><!-- end .wrap -->
-    </div><!-- end #banner -->
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/imagescroll.js"></script>
-</body>
+        <div class="col-md-12">
+          <ul class="social social-circle">
+            <li>
+              <a href="https://www.github.com/adamoliver" class="icon-github" title="Github">
+                <i class="ico-github-alt" aria-label="Github"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com/AdamMOliver" class="icon-twitter" title="Twitter">
+                <i class="ico-twitter" aria-label="Twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.adamoliverphotography.com" class="icon-photo" title="Photography">
+                <i class="ico-camera" aria-label="Photography"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/adammoliver" class="icon-linkedin" title="Linkedin">
+                <i class="ico-linkedin" aria-label="LinkedIn"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.strava.com/athletes/6859468" class="icon-strava" title="Strava">
+                <i class="ico-bicycle" aria-label="Strava"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
