--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="container">
       <div class="item">
         <h1>Adam Oliver</h1>
-        <p>Front end developer</p>
+        <ul class="roles">
+          <li><a href="https://www.github.com/adamoliver">Front end developer</a></li>
+          <li><a href="https://www.adamoliverphotography.com">Photographer</a></li>
+        </ul>
 
         <div class="col-md-12">
           <ul class="social social-circle">
