Add SVG background and refactor styles

--- a/index.html
+++ b/index.html
@@ -11,43 +11,40 @@
   </head>
   <body>
     <div class="container">
-      <div class="item">
-        <h1>Adam Oliver</h1>
-        <ul class="roles">
-          <li><a href="https://www.github.com/adamoliver">Front end developer</a></li>
-          <li><a href="https://www.adamoliverphotography.com">Photographer</a></li>
-        </ul>
+      <h1>Adam Oliver</h1>
+      <ul class="roles">
+        <li><a href="https://www.github.com/adamoliver">Frontend developer</a></li>
+        <li><a href="https://www.adamoliverphotography.com">Photographer</a></li>
+        <li><a href="https://www.strava.com/athletes/6859468">Cyclist</a></li>
+      </ul>
 
-        <div class="col-md-12">
-          <ul class="social social-circle">
-            <li>
-              <a href="https://www.github.com/adamoliver" class="icon-github" title="Github">
-                <i class="ico-github-alt" aria-label="Github"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.twitter.com/AdamMOliver" class="icon-twitter" title="Twitter">
-                <i class="ico-twitter" aria-label="Twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.adamoliverphotography.com" class="icon-photo" title="Photography">
-                <i class="ico-camera" aria-label="Photography"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/adammoliver" class="icon-linkedin" title="Linkedin">
-                <i class="ico-linkedin" aria-label="LinkedIn"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.strava.com/athletes/6859468" class="icon-strava" title="Strava">
-                <i class="ico-bicycle" aria-label="Strava"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <ul class="social">
+        <li>
+          <a href="https://www.github.com/adamoliver" class="icon-github" title="Github">
+            <i class="ico-github-alt" aria-label="Github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com/AdamMOliver" class="icon-twitter" title="Twitter">
+            <i class="ico-twitter" aria-label="Twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.adamoliverphotography.com" class="icon-photo" title="Photography">
+            <i class="ico-camera" aria-label="Photography"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/adammoliver" class="icon-linkedin" title="Linkedin">
+            <i class="ico-linkedin" aria-label="LinkedIn"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.strava.com/athletes/6859468" class="icon-strava" title="Strava">
+            <i class="ico-bicycle" aria-label="Strava"></i>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
